--- a/materials/2-workshop2/8-group-project/group_a.qmd
+++ b/materials/2-workshop2/8-group-project/group_a.qmd
@@ -1,45 +1,61 @@
 ---
-title: "Research Project A "
+# title: "Research Project A "
 format:
   html:
     toc: true
 ---
 
-## Does yogurt consumption change the vaginal microbiome? ![](images/greek-yogurt.jpg){width=15%}
+##### Research Project A \
+## Does yogurt consumption change the vaginal microbiome? \
+
+![](images/greek-yogurt.jpg){width=25%}
 
 
-#### Description
-This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. 16S rRNA sequencing was done to charaterize patient microbiome composition. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at two timepoints, pre and post antibiotic treatment.
+#### **Description**  
+This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. 16S rRNA sequencing was done to characterize patient microbiome composition. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. Data was collected at two timepoints, pre and post antibiotic treatment.
 
-\
 
-#### Questions and aims for yogurt (!To be updated with aims and questions from lecture slides)
-**16S processing** \
+## Question and Aims
 
-* Identify project files on your instance
-** What does the count tables represent?
-* Thinky question about dada2
-* Merge data from other assays
-* Filter sample data with groups metadata
-* Filter counts table with filtered sample data
-* Filter tax table with cleaned count table
-* Generate phyloseq object
-* Phyloseq cleaning (following Liz's slides)
-* tax_fix to set unassinged
+#### **16S Processing** \
+
+- Identify project files on your instance
+  - What does the count table represent? What are the columns and rows?
+- Subset phyloseq object by yogurt dataset samples
+  - Filter count table by yogurt samples
+  - Remove unused ASVs
+  - Filter tax_table by the ASVs    
+- Merge data from other assays
+  - Which columns should you use to merge columns?
+- Create phyloseq object
+- Phyloseq cleaning (Liz's slides)
+  - Fix NAs
 <!-- * Optional: Can you use the control samples to test Dada2's accuracy? -->
  
 
-**16S analysis**
 
-* Plot the microbiome!
-* Generate plots to compare relative abundance across arms and time points
-* What are noticable differences after antibiotic treatment?
-* **Does consumption of yogurt influence people's microbiome?**
-* Are there ways to change the scale so that taxa at lower abundance can be more easily visualized? (log transform)
-* Diversity
-* Shannon
-* Use a distance metric and explain what it means when comparing across groups
-* Conduct differential abundance testing (joseph's slides)
-* give steps with tax tree 
-* Incorporate shotgun metagenomic data into the phyloseq (micahel's slides)
-* Optional: Use microViz to explore the phyloseq object
+#### **Exploring High Dimensional Data** \
+- Plot the microbiome!
+- Generate plots to compare relative abundance across arms and time points
+  - What are noticable differences after antibiotic treatment?
+  - **Does consumption of yogurt influence patient's microbiome?**
+- How do cytokines correlate with Lactobacillus?  
+- Which cytokines correlate with certain taxa?
+  - Create a heatmap
+- How do the absolute abundance of bacteria change after antibiotic administration?
+- Are there ways to change the scale so that taxa at lower abundance can be more easily visualized? (transformations)
+- Optional: Use microViz to explore the phyloseq object
+
+#### **Further Analysis**
+
+- Microbiome diversity
+  - Compute Shannon Indices
+
+- Ordination
+  - What are some distance metrics?
+- Differential Abundance testing (joseph's slides)
+  - Statistical modelling
+  - Create a taxa tree 
+
+- Incorporate metagenomic data into the phyloseq (micahel's slides)
+
