--- a/materials/2-workshop2/8-group-project/group_b.qmd
+++ b/materials/2-workshop2/8-group-project/group_b.qmd
@@ -1,31 +1,57 @@
 ---
-title: "Research Project B "
+title: ""
 format:
   html:
     toc: true
 ---
 
+##### Research Project B \
 ## Does birth control change inflammation during menstruation? ![](images/birth_control.png){width=15%}
 
-#### Questions and aims for birth control dataset (!To be updated with birth control data and lecture slide notes)
-**16S processing** \
+#### **Description**  
+This is an observational study to evaluate the relationship between birth control and vaginal inflammation. In response to menstruation. 16S rRNA sequencing was done to characterize patient microbiome composition. Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at four timepoints; before, at the start, the end, and after menstruation.
 
-* Identify project files on your instance
-* What are some pre-processing steps to take before running Dada2?
-* What can you say about the quality of the reads?
-* Merge data from other assays 
-* Generate a phyloseq object
-* Phyloseq cleaning
-* Optional: Can you use the control samples to test Dada2's accuracy?
+
+## Question and Aims
+
+#### **16S Processing** \
+
+- Identify project files on your instance
+  - What does the count table represent? What are the columns and rows?
+- Subset phyloseq object by birth control dataset samples
+  - Filter count table by samples
+  - Remove unused ASVs
+  - Filter tax_table by the ASVs    
+- Merge data from other assays
+  - Which columns should you use to merge columns?
+- Create phyloseq object
+- Phyloseq cleaning (Liz's slides)
+  - Fix NAs
+<!-- * Optional: Can you use the control samples to test Dada2's accuracy? -->
  
 
-**16S analysis**
 
-* Generate plots to compare relative abundance across arms and time points
-* What are noticable differences after antibiotic treatment?
-* **Does consumption of yogurt influence people's microbiome?**
-* Are there ways to change the scale so that taxa at lower abundance can be more easily visualized?
-* Use a distance metric and explain what it means when comparing across groups
-* Conduct differential abundance testing (simply wilcoxon or using DESeq2?)
-* Incorporate shotgun metagenomic data into the phyloseq
-* Optional: Use microViz to explore the phyloseq object
+#### **Exploring High Dimensional Data** \
+- Plot the microbiome!
+- Generate plots to compare relative abundance across arms and time points
+  - What are noticable differences after antibiotic treatment?
+  - **How does taking birth control influence a patient's microbiome across their menstrual cycle?**
+- How do cytokines correlate with Lactobacillus?  
+- Which cytokines correlate with certain taxa?
+  - Create a heatmap
+- How do the number of immune cells vary across time points?
+- Are there ways to change the scale so that taxa at lower abundance can be more easily visualized? (transformations)
+- Optional: Use microViz to explore the phyloseq object
+
+#### **Further Analysis**
+
+- Microbiome diversity
+  - Compute Shannon Indices
+
+- Ordination
+  - What are some distance metrics?
+- Differential Abundance testing (joseph's slides)
+  - Statistical modeling
+  - Create a taxa tree 
+
+- Incorporate metagenomic data into the phyloseq (micahel's slides)
