--- a/materials/2-workshop2/5-16s-pt2/index.qmd
+++ b/materials/2-workshop2/5-16s-pt2/index.qmd
@@ -1,7 +1,28 @@
 ---
-title: "16S pt2"
+title: "Correlations and Differential Abundance Testing"
 format:
   html:
     toc: true
 ---
+
+```{r}
+#| echo: false
+#| warning: false
+#| message: false
+
+library(countdown)
+library(tidyverse)
+library(cowplot)
+library(colorspace)
+library(here)
+
+```
+
+
+<!-- ## Slides   -->
+<!-- [Make slides full screen](slides.qmd) -->
+
+<!-- ```{=html} -->
+<!-- <iframe class="slide-deck" src="slides.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe> -->
+<!-- ``` -->
 
