--- a/materials/2-workshop2/1-library-prep/index.qmd
+++ b/materials/2-workshop2/1-library-prep/index.qmd
@@ -7,6 +7,7 @@ format:
   
 ## Slides
 
+[Make slides full screen](Durban_Presentation_2024.pdf)
 ```{=html}
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR9PuJrSSzS2xPiHx_GINCYjCMaAy4pbNkIDVdwKW_bFKapuPcBBD3D_wErKuadjj0o-oZYuvUcB8Zf/embed?start=true&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRs-iZBS34DrHycuqA2BtkVmqpUp1Z6_my0tcO-_7DqQICc3gLqkDCiOwczM6VlZI3qFasZ_6VPqXKi/embed?start=true&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 ```
