updated module 2 exercise, updated about page

--- a/about.qmd
+++ b/about.qmd
@@ -142,7 +142,7 @@ Centre for Epidemic Response and Innovation (CERI) - Stellenbosch
 
 ::: {.g-col-4}
 [*Teaching Assistant*]{style="font-size: 0.8em"}  
-**Afrah Khairallah**  
+**Dr. Afrah Khairallah**  
 Postdoctoral Research Fellow
 Africa Health Research Institute (AHRI) - UKZN  
 :::
