--- a/materials/2-workshop2/8-group-project/group_a.qmd
+++ b/materials/2-workshop2/8-group-project/group_a.qmd
@@ -1,21 +1,27 @@
 ---
-# title: "Research Project A "
+title: "Research Project A "
 format:
-  html:
+ html:
+    code-fold: false
     toc: true
+    toc-expand: true
+    toc-location: right
+editor: visual
 ---
 
 ##### Research Project A \
-## Does yogurt consumption change the vaginal microbiome? \
-
-![](images/greek-yogurt.jpg){width=25%}
+## Does yogurt consumption change the vaginal microbiome? ![](images/birth_control.png){width=15%}
 
 
-#### **Description**  
+\
+
+{{< include group_activity_1_yogurt_starter.qmd >}}
+
+<!-- #### **Description**  
 This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. 16S rRNA sequencing was done to characterize patient microbiome composition. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. Data was collected at two timepoints, pre and post antibiotic treatment.
+ -->
 
-
-## Questions and Aims
+<!-- ## Questions and Aims
 
 #### **16S Processing** \
 
@@ -34,7 +40,7 @@ This is a randomized controlled trial to study whether yogurt consumption has an
  
 
 
-#### **Exploring High Dimensional Data** \
+<!-- #### **Exploring High Dimensional Data** \
 - Plot the microbiome!
 - Generate plots to compare relative abundance across arms and time points
   - What are noticable differences after antibiotic treatment?
@@ -52,10 +58,4 @@ This is a randomized controlled trial to study whether yogurt consumption has an
   - Compute Shannon Indices
 
 - Ordination
-  - What are some distance metrics?
-<!-- - Differential Abundance testing (joseph's slides)
-  - Statistical modelling
-  - Create a taxa tree 
-
-- Incorporate metagenomic data into the phyloseq (micahel's slides)
- -->
+  - What are some distance metrics? --> -->
