--- a/materials/2-workshop2/8-group-project/index.qmd
+++ b/materials/2-workshop2/8-group-project/index.qmd
@@ -4,3 +4,112 @@ format:
   html:
     toc: true
 ---
+
+Find your group on the instances tab!
+
+### Schedule
+**Wednesday (4/24)**
+
++----------------+-----------------------------------------------------------------------------------+
+| Time           | Task                                                                              |
++================+===================================================================================+
+| 1:30-2:00pm    |- Find your groups!                                                                |
+|                |- Read project description and aims for your project                               |
+|                |- Identify files and create a new quarto project                                   |
++----------------+-----------------------------------------------------------------------------------+
+| 2:00 - 3:00pm  |- Create phyloseq object                                                           |
+|                |- Phyloseq cleaning                                                                |
++----------------+-----------------------------------------------------------------------------------+
+| 3:00 - 3:30pm  | **Break**                                                                         |
++----------------+-----------------------------------------------------------------------------------+
+| 3:30- 5:00pm   |- **Explore the data!**                                                            |
+|                |- Visualizing microbiome composition                                               |
+|                |- Alpha Diversity                                                                  |
++----------------+-----------------------------------------------------------------------------------+
+<!-- :::{.callout-Group_A}
+
+<b>Study Description</b>  
+
+::: -->
+
+### Projects
+
+<!-- :::{.callout-note title="Research Project A - Does yogurt consumption change the vaginal microbiome?" appearance="simple"}
+\
+**Aim**\
+To investigate whether the consumption of yogurt influences microbiome composition after antibiotics treatment.\
+\
+**Study Description** \
+This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at two timepoints, pre and post antibiotic treatment. (add 16s)
+\
+ 
+::: -->
+
+:::{.block}
+::::{.block-header} 
+Research Project A - Does yogurt consumption change the vaginal microbiome?
+::::
+::::{.block-container id="group_a"}
+**Aim**\
+To investigate whether the consumption of yogurt influences microbiome composition after antibiotics treatment.\
+\
+**Study Description** \
+This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. 16S rRNA sequencing was done to characterize patient microbiome composition. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. Data was collected at two timepoints, pre and post antibiotic treatment.
+\
+::::
+:::
+<script> 
+  // Add click event listener to the block header
+  document.getElementById("group_a").addEventListener("click", function() {
+    window.location.href = "group_activity_1_yogurt_starter.html";
+  });
+</script>
+
+
+
+
+:::{.block}
+::::{.block-header}
+Research Project B - Does birth control change inflammation during menstruation?
+::::
+::::{.block-container id="group_b"}
+**Aim**\
+To investigate whether taking birth control is associated with vaginal inflammation throughout the menstrual cycle.\
+\
+**Study Description** \
+This is an observational study to evaluate the relationship between birth control and vaginal inflammation. In response to menstruation. 16S rRNA sequencing was done to characterize patient microbiome composition. Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at four timepoints; before, at the start, the end, and after menstruation.
+\
+::::
+:::
+<script> 
+  // Add click event listener to the block header
+  document.getElementById("group_b").addEventListener("click", function() {
+    window.location.href = "group_activity_1_birthcontrol_starter.html";
+  });
+</script>
+
+
+
+
+
+<!-- 
+**Thursday (4/25)**
+
++----------------+-------------------------------------------------------------------------------------+
+| Time           | Task                                                                                |
++================+=====================================================================================+
+| 1:30 - 2:00pm  |- Ordination and Correlations                                                        |
++----------------+-------------------------------------------------------------------------------------+
+| 2:00 - 3:00pm  |- Differential Abundance                                                             |
++----------------+-------------------------------------------------------------------------------------+
+|3:00 - 3:30pm   | **Break**                                                                           |
++----------------+-------------------------------------------------------------------------------------+
+|3:30 - 5:00pm   |- Integrating Shotgun Metagenomics                                                   |
++----------------+-------------------------------------------------------------------------------------+ -->
+
+### Example workflows
+<!-- [Johnathan's test demo](johnathan_demo_final.qmd) -->
+*Will be added on Friday!* \
+
+\
+Note: If downloading the demos, make sure the filepaths to the datasets match!
