--- a/materials/2-workshop2/8-group-project/johnathan_demo_final.qmd
+++ b/materials/2-workshop2/8-group-project/johnathan_demo_final.qmd
@@ -126,7 +126,10 @@ updated_yogurt_ps <- yogurt_ps %>%
                     ))%>%
                     tax_mutate(Genus_Species = str_c(Genus, Species, sep = " "))
   
-
+updated_yogurt_ps %>%
+  ps_seriate(dist = "bray", method = "OLO_ward") %>% # arranges samples by microbiome similarity
+  comp_barplot(tax_level = "Genus_Species", facet_by = c("arm","time_point"), sample_order = "bray", n_taxa = 21)
+  
 #TBA additional ps cleaning
 
 ```
