--- a/materials/2-workshop2/4-16s-pt1/16S_part1_slides.qmd
+++ b/materials/2-workshop2/4-16s-pt1/16S_part1_slides.qmd
@@ -9,6 +9,22 @@ Workshop materials can be found here:
 
 <https://elsherbini.github.io/durban-data-science-for-biology/>
 
+
+## Practicalities
+
+::: r-fit-text
+WiFi:
+
+Network: KTB Free Wifi (no password needed)
+
+Network AHRI Password: `@hR1W1F1!17`
+
+Network CAPRISA-Corp Password: `corp@caprisa17`
+
+Bathrooms are out the lobby to your left
+:::
+
+
 ## Hello 👋👋
 
 My name is Elizabeth Costello (**Liz**)
