--- a/instance_ips.qmd
+++ b/instance_ips.qmd
@@ -22,9 +22,12 @@ library(tidyverse)
 
 ips <- read_csv("datasets/ips_for_workshop.csv") %>%
         mutate(Name = str_c(First, Last, sep = " ")) %>%
-        # mutate(Dataset = rep(c("A","B"), n()/2)) %>%
-        # mutate(group = rep(1:6,))
         select(-c(First,Last))
+        # mutate(Dataset = c(rep(c("A","B"), 28), rep("", 12))) %>%
+        # mutate(group_id = c(rep(1:3, 19), rep("", 11))) %>%
+        # mutate(Group = str_c(Dataset, group_id, sep = "-")) %>%
+        # select(-c(First,Last, Dataset, group_id)) %>%
+        # mutate(Group = ifelse(row_number() %in% c(56,57), "-", Group))
 
 ips %>% gt() %>% opt_stylize(style = 6, color = 'gray') %>% cols_align(align = "left")
 
