--- a/materials/2-workshop2/8-group-project/group_activity_1_yogurt_starter.qmd
+++ b/materials/2-workshop2/8-group-project/group_activity_1_yogurt_starter.qmd
@@ -125,6 +125,11 @@ yogurt_ps <- phyloseq(otu_table(count_table, taxa_are_rows=FALSE),
 
 **Warning:** From here on out, there will be less helpful code! 
 
+\
+
+
+*These are questions that can be used as a guide. Looking at the data, think about what questions you can address!*
+
 ### Phyloseq cleaning and diagnosis :mag:
 
 - Remove low-yield samples
@@ -143,7 +148,7 @@ Optional questions (Examine your sample_data to see what other questions you can
 
 - What cytokines correlated with Lactobaccilus?
 - What cytokines correlate with certain taxa?
-- How do the absolute abundance of bacteria and Lactobacillus speices change after antibiotic administration?
+- How do the absolute abundance of bacteria and Lactobacillus species change after antibiotic administration?
 
 ::: {.callout-tip title="Is your plot hard to see?" collapse="true"}
 :thought_balloon: Consider adjusting the code chunk options! \
