--- a/materials/2-workshop2/8-group-project/index.qmd
+++ b/materials/2-workshop2/8-group-project/index.qmd
@@ -26,6 +26,19 @@ Find your group on the instances tab!
 |                |- Visualizing microbiome composition                                               |
 |                |- Alpha Diversity                                                                  |
 +----------------+-----------------------------------------------------------------------------------+
+
+**Thursday (4/25)** \
+*To be added*
+
+\
+
+**Friday (4/26)** \
+Group presentations!
+
+
+
+
+
 <!-- :::{.callout-Group_A}
 
 <b>Study Description</b>  
